<resources>
    <string name="app_name">JoonVPN</string>
    <string name="connect">Connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="timer_default_value">00:00:00</string>
    <string name="battery_saver_warning">Enable unrestricted battery usage to prevent VPN disconnection.</string>
    <string name="fix_now">Fix Now</string>
    <string name="download">↓ Download</string>
    <string name="traffics_default_values">0 B</string>
    <string name="upload">↑ Upload</string>
    <string name="total_traffic">Total Traffic Used</string>
    <string name="vpn_sharing">Share Your VPN</string>
    <string name="download_error">Error in receiving initial information</string>
    <string name="no_network_connection_title">No network connection</string>
    <string name="no_network_connection_description">Please check your Wi-Fi or mobile data connection and try again.</string>
    <string name="got_it">Got it</string>
    <string name="no_config_available">No configuration is available for connection. First connect to the internet to receive the configuration.</string>
    <string name="proxy_address_title">Proxy Address</string>
    <string name="proxy_address_copied">Proxy address copied to clipboard!</string>
    <string name="no_internet_connection">There is no internet connection.</string>
    <string name="update_available">New version available</string>
    <string name="default_changelog">Please update the app for better performance.</string>
    <string name="update">Update</string>
    <string name="later">Not now</string>
    <string name="ok">OK</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="getting_config_error_title">Error receiving configurations</string>
    <string name="getting_config_error_description">The application could not obtain information from the servers. This problem may be due to a network outage or GitHub filtering.\n\nDetails:</string>
    <string name="retry">Retry</string>
    <string name="report_section_today">📊 *Today*</string>
    <string name="report_section_week">📅 *Last 7 Days*</string>
    <string name="report_section_month">📆 *Last 30 Days*</string>
    <string name="report_row_duration">⏱ Connection Time: %1$s</string>
    <string name="report_row_traffic">📥 Download: %1$s | 📤 Upload: %2$s</string>
    <string name="report_row_total">🔄 Total Traffic: %1$s</string>
    <string name="vpn_usage">VPN usage and performance report</string>
    <string name="close">Close</string>
    <string name="wait_for_connection">Please wait while we establish a tunnel.</string>
    <string name="connection_failed_title">Connection Failed</string>
    <string name="connection_failed_description">Could not connect to the server. Click to retry.</string>
    <string name="change_server_title">Change Server</string>
    <string name="change_server_description">Slow connection? Change the server!</string>
    <string name="internet_connection_require">The application requires an internet connection for initial setup and receiving configurations. Please check your network.</string>
    <string name="exit">Exit</string>
    <string name="exit_toast_message">Press back again to exit</string>
    <string name="about_title">✨ About JoonVPN</string>
    <string name="about_libraries_header">📚 Dependencies</string>
    <string name="about_libraries_list">• androidx.appcompat\n• com.github.bumptech.glide\n• com.google.android.material\n• androidx.activity\n• androidx.constraintlayout\n• com.squareup.okhttp3\n• 2dust/AndroidLibXrayLite\n• heiher/hev-socks5-tunnel</string>
    <string name="about_footer">🎨 Logo Designer:\n• Telegram ID: @IHEJE\n\n Made with ❤️ by @JoonVPN Channel</string>
    <string name="about_security_warning">⚠️ This app uses free configurations from Telegram, so avoid using it in areas that require high security. This app is designed to bypass restrictions, not to secure communications.</string>
    <string name="about_positive_button">OK</string>
    <string name="copied">Copied</string>

</resources>